--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,6 @@
 ==== NOW =====
-Multiple Window support
-	What happens if we render a texture with a different renderer than the
-	one it was created with?
+OpenGL stuff
 
 ==== LATER ====
-OpenGL stuff
+Get the newest version of SDL_mixer to work
 SDL_mixer sound effects stuff
