--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,9 @@
 ==== NOW =====
 Make library header only
-	- meaning it won't make sense to have those HAVE macros declared on
-	config.hpp
-	- also meaning SCC headers shouldn't pull SDL.h or other SDL headers
-	- also meaning the tests' makefiles must be changed
-
-scc.hpp should check (through version macros) if sdl_image, mixer, ... was
-actually included if its repsective have macro have been declared
+	- the tests' makefiles must be changed
+	- rewrite config test
+	- rewrite README with right usage info (the user has to define the have
+	  macros and include any SDL headers before including scc.hpp)
 
 A demo folder
 
